nested resources for api namespace

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
+<nav class="navbar navbar-default">
+  {{#link-to "api/cities"}}Cities{{/link-to}}
+  {{#link-to "api/artists"}}Artists{{/link-to}}
+  {{#link-to "api/albums"}}Albums{{/link-to}}
+  {{#link-to "api/comments"}}Comments{{/link-to}}
+</nav>
+
 <h2 id="title">Media Catalog</h2>
 
 <br /><br /><br />
