--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -1,8 +1,8 @@
 body {
   font-size: 1.5em;
   font-weight: 200;
-  margin: 5%;
-  padding: 5%;
+  margin: 0% 3% 3%;
+  padding: 0% 3% 3%;
   text-align: center;
 }
 
