formatted page titles

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,9 @@
   {{#link-to "api/comments"}}Comments{{/link-to}}
 </nav>
 
-<h2 id="title">Media Catalog</h2>
+<h1 id="title">
+  Media Catalog
+</h1>
 
 <br /><br /><br />
 
