--- a/app/templates/components/album-table.hbs
+++ b/app/templates/components/album-table.hbs
@@ -1,4 +1,4 @@
-<h2>Albums</h2>
+<h2 class="page-title">Albums</h2>
 
 <br /><br />
 
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each model as |album|}}
+    {{#each albums as |album|}}
     <tr>
       <td>{{album.name}}</td>
       <td>{{album.artist_id}}</td>
