--- a/app/templates/components/artist-table.hbs
+++ b/app/templates/components/artist-table.hbs
@@ -1,4 +1,4 @@
-<h2>Artists</h2>
+<h2 class="page-title">Artists</h2>
 
 <br /><br />
 
@@ -12,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each model as |artist|}}
+    {{#each artists as |artist|}}
     <tr>
       <td>{{artist.name}}</td>
       <td>{{artist.based_in}}</td>
