--- a/app/templates/components/city-table.hbs
+++ b/app/templates/components/city-table.hbs
@@ -1,4 +1,4 @@
-<h2>Cities</h2>
+<h2 class="page-title">Cities</h2>
 
 <br /><br />
 
@@ -10,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each model as |city|}}
+    {{#each cities as |city|}}
     <tr>
       <td>{{city.name}}</td>
       <td>Artists</td>
