--- a/app/templates/components/comment-table.hbs
+++ b/app/templates/components/comment-table.hbs
@@ -1,4 +1,4 @@
-<h2>Comments</h2>
+<h2 class="page-title">Comments</h2>
 
 <br /><br />
 
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each model as |comment|}}
+    {{#each comments as |comment|}}
     <tr>
       <td>{{comment.album_id}}</td>
       <td>{{comment.author}}</td>
