--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-default">
-  {{#link-to "api/cities"}}Cities{{/link-to}}
-  {{#link-to "api/artists"}}Artists{{/link-to}}
-  {{#link-to "api/albums"}}Albums{{/link-to}}
-  {{#link-to "api/comments"}}Comments{{/link-to}}
+  <ul class="nav navbar-nav">
+    <li>{{#link-to "api/cities"}}Cities{{/link-to}}</li>
+    <li>{{#link-to "api/artists"}}Artists{{/link-to}}</li>
+    <li>{{#link-to "api/albums"}}Albums{{/link-to}}</li>
+    <li>{{#link-to "api/comments"}}Comments{{/link-to}}</li>
+  </ul>
 </nav>
 
 <h1 id="title">
