fixed the adapter

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-default">
   <ul class="nav navbar-nav">
-    <li>{{#link-to "api/cities"}}Cities{{/link-to}}</li>
-    <li>{{#link-to "api/artists"}}Artists{{/link-to}}</li>
-    <li>{{#link-to "api/albums"}}Albums{{/link-to}}</li>
-    <li>{{#link-to "api/comments"}}Comments{{/link-to}}</li>
+    <li>{{#link-to "cities"}}Cities{{/link-to}}</li>
+    <li>{{#link-to "artists"}}Artists{{/link-to}}</li>
+    <li>{{#link-to "albums"}}Albums{{/link-to}}</li>
+    <li>{{#link-to "comments"}}Comments{{/link-to}}</li>
   </ul>
 </nav>
 
