--- a/app/templates/components/album-table.hbs
+++ b/app/templates/components/album-table.hbs
@@ -1,21 +1,25 @@
 <table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Artist</th>
-      <th>Year</th>
-      <th>Total Sold</th>
-      <th>Comments</th>
+      <th class="col-xs-3">Name</th>
+      <th class="col-xs-3">Artist</th>
+      <th class="col-xs-1">Year</th>
+      <th class="col-xs-1">Total Sold</th>
+      <th class="col-xs-4">Comments</th>
     </tr>
   </thead>
   <tbody>
     {{#each albums as |album|}}
     <tr>
-      <td>{{album.name}}</td>
-      <td>{{album.artist_id}}</td>
-      <td>{{album.year}}</td>
-      <td>{{album.total_sold}}</td>
-      <td>Comments</td>
+      <td class="col-xs-3">{{album.name}}</td>
+      <td class="col-xs-3">{{album.artist_id.name}}</td>
+      <td class="col-xs-1">{{album.year}}</td>
+      <td class="col-xs-1">{{album.total_sold}}</td>
+      <td class="col-xs-4">
+        {{#each album.comments as |comment|}}
+          {{comment.name}},
+        {{/each}}
+      </td>
     </tr>
     {{/each}}
   </tbody>
