--- a/app/templates/components/artist-table.hbs
+++ b/app/templates/components/artist-table.hbs
@@ -1,19 +1,19 @@
 <table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>City</th>
-      <th>Founding Year</th>
-      <th>Albums</th>
+      <th class="col-xs-2">Name</th>
+      <th class="col-xs-2">City</th>
+      <th class="col-xs-2">Founding Year</th>
+      <th class="col-xs-6">Albums</th>
     </tr>
   </thead>
   <tbody>
     {{#each artists as |artist|}}
     <tr>
-      <td>{{artist.name}}</td>
-      <td>{{artist.based_in}}</td>
-      <td>{{artist.founding_year}}</td>
-      <td>Albums</td>
+      <td class="col-xs-2">{{artist.name}}</td>
+      <td class="col-xs-2">{{artist.based_in.name}}</td>
+      <td class="col-xs-2">{{artist.founding_year}}</td>
+      <td class="col-xs-6">Albums</td>
     </tr>
     {{/each}}
   </tbody>
