--- a/app/templates/components/city-table.hbs
+++ b/app/templates/components/city-table.hbs
@@ -1,15 +1,19 @@
 <table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Artists</th>
+      <th class="col-xs-2">Name</th>
+      <th class="col-xs-10">Artists</th>
     </tr>
   </thead>
   <tbody>
     {{#each cities as |city|}}
     <tr>
-      <td>{{city.name}}</td>
-      <td>Artists</td>
+      <td class="col-xs-2">{{city.name}}</td>
+      <td class="col-xs-10">
+        {{#each city.artists as |artist|}}
+          {{artist.name}}
+        {{/each}}
+      </td>
     </tr>
     {{/each}}
   </tbody>
