--- a/app/templates/components/comment-table.hbs
+++ b/app/templates/components/comment-table.hbs
@@ -1,17 +1,17 @@
 <table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
-      <th>Album</th>
-      <th>Author</th>
-      <th>Message</th>
+      <th class="col-xs-2">Album</th>
+      <th class="col-xs-2">Author</th>
+      <th class="col-xs-8">Message</th>
     </tr>
   </thead>
   <tbody>
     {{#each comments as |comment|}}
     <tr>
-      <td>{{comment.album_id}}</td>
-      <td>{{comment.author}}</td>
-      <td>{{comment.message}}</td>
+      <td class="col-xs-2">{{comment.album_id.name}}</td>
+      <td class="col-xs-2">{{comment.author}}</td>
+      <td class="col-xs-8">{{comment.message}}</td>
     </tr>
     {{/each}}
   </tbody>
