comments show correct data, working on other tables

--- a/app/templates/components/album-table.hbs
+++ b/app/templates/components/album-table.hbs
@@ -17,7 +17,7 @@
       <td class="col-xs-1">{{album.total_sold}}</td>
       <td class="col-xs-4">
         {{#each album.comments as |comment|}}
-          {{comment.name}},
+          {{comment.message}},
         {{/each}}
       </td>
     </tr>
