--- a/app/templates/components/city-table.hbs
+++ b/app/templates/components/city-table.hbs
@@ -11,7 +11,7 @@
         <tr>
           <td class="col-xs-2">{{city.name}}</td>
           <td class="col-xs-10">
-            {{#each city.artists as |artist|}}
+            {{#each city.artist_ids as |artist|}}
               {{artist.name}}
             {{/each}}
           </td>
