--- a/app/templates/components/artist-table.hbs
+++ b/app/templates/components/artist-table.hbs
@@ -11,7 +11,7 @@
     {{#each artists as |artist|}}
     <tr>
       <td class="col-xs-2">{{artist.name}}</td>
-      <td class="col-xs-2">{{artist.based_in}}</td>
+      <td class="col-xs-2">{{artist.city}}</td>
       <td class="col-xs-2">{{artist.founding_year}}</td>
       <td class="col-xs-6">
         {{#each artist.album_ids as |album|}}
