--- a/app/templates/components/city-table.hbs
+++ b/app/templates/components/city-table.hbs
@@ -12,7 +12,7 @@
           <td class="col-xs-2">{{city.name}}</td>
           <td class="col-xs-10">
             {{#each city.artist_ids as |artist|}}
-              {{artist.name}}
+              {{artist.name}},
             {{/each}}
           </td>
         </tr>
