--- a/app/templates/components/album-table.hbs
+++ b/app/templates/components/album-table.hbs
@@ -11,7 +11,9 @@
   <tbody>
     {{#each albums as |album|}}
     <tr>
-      <td class="col-xs-3">{{album.name}}</td>
+      <td class="col-xs-3">
+        {{#link-to "albums/info" album}}{{album.name}}{{/link-to}}
+      </td>
       <td class="col-xs-3">{{album.artist_id.name}}</td>
       <td class="col-xs-1">{{album.year}}</td>
       <td class="col-xs-1">{{album.total_sold}}</td>
