--- a/app/templates/components/artist-info-table.hbs
+++ b/app/templates/components/artist-info-table.hbs
@@ -1,24 +1,24 @@
 <table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
-      <th class="col-xs-2">Name</th>
-      <th class="col-xs-2">City</th>
-      <th class="col-xs-2">Founding Year</th>
-      <th class="col-xs-6">Albums</th>
+      <th class="col-xs-3">Name</th>
+      <th class="col-xs-1">Year</th>
+      <th class="col-xs-1">Total Sold</th>
+      <th class="col-xs-4">Comments</th>
     </tr>
   </thead>
   <tbody>
+    {{#each albums as |album|}}
     <tr>
-      <td class="col-xs-2">
-        {{#link-to "artists/info" artist}}{{artist.name}}{{/link-to}}
-      </td>
-      <td class="col-xs-2">{{artist.city_id.name}}</td>
-      <td class="col-xs-2">{{artist.founding_year}}</td>
-      <td class="col-xs-6">
-        {{#each artist.album_ids as |album|}}
-          {{album.name}},
+      <td class="col-xs-3">{{album.name}}</td>
+      <td class="col-xs-1">{{album.year}}</td>
+      <td class="col-xs-1">{{album.total_sold}}</td>
+      <td class="col-xs-4">
+        {{#each album.comment_ids as |comment|}}
+          {{comment.message}},
         {{/each}}
       </td>
     </tr>
+    {{/each}}
   </tbody>
 </table>
