--- a/app/templates/components/city-table.hbs
+++ b/app/templates/components/city-table.hbs
@@ -2,15 +2,17 @@
   <thead>
     <tr>
       <th class="col-xs-2">Name</th>
-      <th class="col-xs-10">Artists</th>
+      <th class="col-xs-8">Artists</th>
     </tr>
   </thead>
   <tbody>
     {{#each cities as |city|}}
       {{#if city.name}}
         <tr>
-          <td class="col-xs-2">{{city.name}}</td>
-          <td class="col-xs-10">
+          <td class="col-xs-2">
+            {{#link-to "cities/info" city}}{{city.name}}{{/link-to}}
+          </td>
+          <td class="col-xs-8">
             {{#each city.artist_ids as |artist|}}
               {{artist.name}},
             {{/each}}
