--- a/app/templates/components/album-table.hbs
+++ b/app/templates/components/album-table.hbs
@@ -12,7 +12,7 @@
     {{#each albums as |album|}}
     <tr>
       <td class="col-xs-3">
-        {{#link-to "albums/info" album}}{{album.name}}{{/link-to}}
+        {{#link-to "albums/info" album.id}}{{album.name}}{{/link-to}}
       </td>
       <td class="col-xs-3">{{album.artist_id.name}}</td>
       <td class="col-xs-1">{{album.year}}</td>
