simple detail pages are working

--- a/app/templates/comments/info.hbs
+++ b/app/templates/comments/info.hbs
@@ -1,9 +1,9 @@
-<h2 class="page-title">{{model.message}}</h2>
+<h3 class="page-title">Comment Details</h3>
 {{#link-to "comments"}}
   <h4 class="page-title">View All Comments</h4>
 {{/link-to}}
 
-<br /><br />
+<br /><br /><br />
 
 {{comment-info-table
   comment=model}}
