added lower link back to all detail pages

--- a/app/templates/albums/info.hbs
+++ b/app/templates/albums/info.hbs
@@ -9,3 +9,9 @@
 
 {{album-info-table
   album=model}}
+
+<br /><br /><br />
+
+{{#link-to "albums"}}
+  <h4 class="page-title">View All Albums</h4>
+{{/link-to}}
