--- a/app/templates/artists/info.hbs
+++ b/app/templates/artists/info.hbs
@@ -10,3 +10,9 @@
 {{artist-info-table
   artist=model.artist
   albums=model.albums}}
+
+<br /><br /><br />
+
+{{#link-to "artists"}}
+  <h4 class="page-title">View All Artists</h4>
+{{/link-to}}
