--- a/app/templates/cities/info.hbs
+++ b/app/templates/cities/info.hbs
@@ -9,3 +9,9 @@
 
 {{city-info-table
   city=model}}
+
+<br /><br /><br />
+
+{{#link-to "cities"}}
+  <h4 class="page-title">View All Cities</h4>
+{{/link-to}}
