--- a/app/templates/comments/info.hbs
+++ b/app/templates/comments/info.hbs
@@ -7,3 +7,9 @@
 
 {{comment-info-table
   comment=model}}
+
+<br /><br /><br />
+
+{{#link-to "comments"}}
+  <h4 class="page-title">View All Comments</h4>
+{{/link-to}}
