added link to home

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-default">
   <ul class="nav navbar-nav">
+    <li>{{#link-to "index"}}Home{{/link-to}}</li>
     <li>{{#link-to "cities"}}Cities{{/link-to}}</li>
     <li>{{#link-to "artists"}}Artists{{/link-to}}</li>
     <li>{{#link-to "albums"}}Albums{{/link-to}}</li>
