city details now show artists from that city

--- a/app/templates/cities/info.hbs
+++ b/app/templates/cities/info.hbs
@@ -7,8 +7,13 @@
   <h3 class="page-title">City Details</h3>
 <br />
 
-{{city-info-table
-  city=model}}
+<div class="col-xs-12">
+  <div class="col-xs-6">
+    {{city-info-table
+      city=model}}
+  </div>
+  <br />
+</div>
 
 <br /><br /><br />
 
