--- a/app/templates/components/city-info-table.hbs
+++ b/app/templates/components/city-info-table.hbs
@@ -1,1 +1,20 @@
-{{city.name}}
+<table class="table table-striped table-hover table-condensed">
+  <thead>
+    <tr>
+      <th class="col-xs-2">City</th>
+      <th class="col-xs-3">Artist</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each city.artist_ids as |artist|}}
+      <tr>
+        <td class="col-xs-2">
+          {{city.name}}
+        </td>
+        <td class="col-xs-3">
+          {{#link-to "artists/info" artist.id}}{{artist.name}}{{/link-to}}
+        </td>
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
