text align left for page content

--- a/app/templates/comments/info.hbs
+++ b/app/templates/comments/info.hbs
@@ -5,8 +5,10 @@
 
 <br /><br /><br />
 
-{{comment-info-table
-  comment=model}}
+<div class="page-content">
+  {{comment-info-table
+    comment=model}}
+</div>
 
 <br /><br /><br />
 
