--- a/app/templates/components/comment-info-table.hbs
+++ b/app/templates/components/comment-info-table.hbs
@@ -3,10 +3,10 @@
 </div>
 
 <div class="col-xs-12">
-  <h4 style="text-align: left;">
+  <h4>
     Album
   </h4>
-  <h5 class="col-xs-2" style="text-align:left;">
+  <h5 class="col-xs-2">
     {{comment.album_id.name}}
   </h5>
 </div>
@@ -14,10 +14,10 @@
 <br /><br />
 
 <div class="col-xs-12">
-  <h4 style="text-align: left;">
+  <h4>
     Author
   </h4>
-  <h5 class="col-xs-2" style="text-align: left;">
+  <h5 class="col-xs-2" >
     {{comment.author}}
   </h5>
 </div>
@@ -25,10 +25,10 @@
 <br /><br />
 
 <div class="col-xs-12">
-  <h4 style="text-align: left;">
+  <h4>
     Comment Text
   </h4>
-  <h5 style="text-align: left;">
+  <h5 >
     {{comment.message}}
   </h5>
 </div>
@@ -41,7 +41,7 @@
   <br />
 </div>
 
-<h4 style="text-align: left;">
+<h4>
   We could theoretically could add extra data about the comment for this route.
   An example would be information about the user who created that comment.
 </h4>
