fixed album detail page

--- a/app/templates/albums/info.hbs
+++ b/app/templates/albums/info.hbs
@@ -7,8 +7,13 @@
   <h3 class="page-title">Album Comments</h3>
 <br />
 
-{{album-info-table
-  album=model}}
+<div class="col-xs-12">
+  <div class="col-xs-10">
+    {{album-info-table
+      album=model}}
+  </div>
+  <br />
+</div>
 
 <br /><br /><br />
 
