--- a/app/templates/components/album-info-table.hbs
+++ b/app/templates/components/album-info-table.hbs
@@ -1,1 +1,20 @@
-{{album.name}}
+<table class="table table-striped table-hover table-condensed">
+  <thead>
+    <tr>
+      <th class="col-xs-2">Album</th>
+      <th class="col-xs-2">Author</th>
+      <th class="col-xs-6">Message</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each album.comment_ids as |comment|}}
+    <tr>
+      <td class="col-xs-2">{{comment.album_id.name}}</td>
+      <td class="col-xs-2">{{comment.author}}</td>
+      <td class="col-xs-6">
+        {{#link-to "comments/info" comment.id}}{{comment.message}}{{/link-to}}
+      </td>
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
