most of the comment posting form is working

--- a/app/templates/albums/info.hbs
+++ b/app/templates/albums/info.hbs
@@ -10,6 +10,7 @@
 <div class="col-xs-12">
   <div class="col-xs-10">
     {{album-info-table
+      createComment="createComment"
       album=model}}
   </div>
   <br />
