--- a/app/templates/components/album-info-table.hbs
+++ b/app/templates/components/album-info-table.hbs
@@ -18,3 +18,19 @@
     {{/each}}
   </tbody>
 </table>
+
+<br /><br />
+
+<h3 class="page-title">
+  New Comment
+</h3>
+<br />
+<div>
+  {{comment-form
+    album=album
+    createComment="createComment"}}
+</div>
+
+<br />
+  <hr>
+<br />
