--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -2,5 +2,8 @@
 $border-color: #2c343c;
 $background-color: #eee;
 $white: #fff;
+$gray: #ccc;
+$light-gray: #555;
 $black: #000;
 $aqua: #7fdbff;
+$box-shadow: rgba(0, 0, 0, .075);
