--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -14,10 +14,62 @@ td {
   text-align: left;
 }
 
-.page-title {
+.page-title,
+.button-section {
   text-align: left;
 }
 
 .page-content {
   text-align: left;
+}
+
+.form-control {
+  background-color: $white;
+  border: 1px solid $gray;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px $box-shadow;
+  height: 34px;
+  padding: 6px 12px;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  width: 100%;
+}
+
+.form-control,
+output {
+  color: $light-gray;
+  display: block;
+  font-size: 14px;
+  line-height: 1.42857;
+}
+
+.btn,
+.btn-danger.active,
+.btn-danger:active,
+.btn-default.active,
+.btn-default:active,
+.btn-info.active,
+.btn-info:active,
+.btn-primary.active,
+.btn-primary:active,
+.btn-warning.active,
+.btn-warning:active,
+.dropdown-menu>.disabled>a:focus,
+.dropdown-menu>.disabled>a:hover,
+.form-control,
+.navbar-toggle,
+.open>.btn-danger.dropdown-toggle,
+.open>.btn-default.dropdown-toggle,
+.open>.btn-info.dropdown-toggle,
+.open>.btn-primary.dropdown-toggle,
+.open>.btn-warning.dropdown-toggle {
+  background-image: none;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
